Improve splash screen + fix scroll on mobile

--- a/web_modules/portal/src/style/main.css
+++ b/web_modules/portal/src/style/main.css
@@ -47,3 +47,6 @@ select:-webkit-autofill:focus {
     transition-delay: background-color 5000s, color 5000s;
 }
 
+html {
+    touch-action: pan-down;
+}
